# paper-forecast-loop

./: .env.example  .gitignore  AGENTS.md  README.md  pyproject.toml  run_forecast_loop.py  sitecustomize.py
.github/workflows/: ci.yml
config/: brokers.example.yml
docs/: PRD.md  agent-lessons.md  development-environment.md  secrets-management.md
docs/architecture/: M1-strategy-research-robot.md  M2A-sqlite-repository.md  M2B-paper-order-ledger.md  M2C-paper-fills-nav.md  M2D-risk-gates-dashboard.md  M3A-asset-registry.md  M3B-provider-audit-layer.md  M3C-deterministic-historical-candles.md  (+203 more)
tests/: test_assets.py  test_automation_step_display.py  test_backtest.py  test_baselines.py  test_broker.py  test_broker_lifecycle.py  test_broker_reconciliation.py  test_candle_store.py  test_control.py  test_dashboard.py  test_decision_research_agenda.py  test_decision_research_executor.py  test_decision_research_plan.py  test_event_edge.py  test_event_reliability.py  test_execution_safety.py  test_experiment_registry.py  test_governance_docs.py  test_lineage_research_executor.py  test_lineage_research_plan.py  test_locked_evaluation.py  test_m1_strategy.py  test_m3f_decide_all.py  test_m7_evidence_artifacts.py  test_macro_events.py  test_maintenance.py  test_market_derived_events.py  test_market_reaction.py  test_notifications.py  test_operator_console.py  test_paper_orders.py  test_paper_shadow.py  test_pipeline.py  test_portfolio.py  test_provider_audit.py  test_repair_requests.py  test_replay.py  test_research_autopilot.py  test_research_dataset.py  test_research_gates.py  (+13 more)
(+358 files in other folders)
